# ascii-hydra

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml  taplo.toml  yamllintconfig.yaml
docs/: use_assets.md
papers/multi_platform_orchestration/: appendix_1.md  appendix_2.md  paper.bib  paper.md
papers/multi_platform_orchestration/history/: paper_v0.0.1.md
src/: environment.yml
src/pipeline_example/: setup.py
src/pipeline_example/pipeline_example/: assets.py  step_1.py  step_2.py
src/pipelines/ascii_library/: pyproject.toml  setup.py
src/pipelines/ascii_library/ascii_library/orchestration/pipes/: __init__.py  cloud_client.py  cloud_context.py  cloud_context_s3.py  cloud_reader_writer.py  cloud_reader_writer_s3.py  databricks.py  emr.py  emr_constants.py  instance_config.py  spark_pipes.py  spark_pipes_factory.py  spark_script_abc.py  utils.py
src/pipelines/ascii_library/ascii_library/orchestration/resources/: constants.py  databricks.py  emr.py  emr_constants.py  parquet_io_manager.py  spark.py
src/pipelines/ascii_library/ascii_library_tests/: test_cloud_client.py  test_utils.py
src/pipelines/ascii_library_demo/: CONTRIBUTING  Makefile  README.md
src/pipelines/ascii_library_demo/pipeline_example/: .gitignore  pixi.toml
src/pipelines/ascii_library_demo/pipeline_example/pipeline_example/: __init__.py  assets.py  step_1.py  step_2.py
src/pipelines/ascii_library_demo/pipeline_example/pipeline_example/resources/: __init__.py
src/pipelines/ascii_library_demo/pipeline_example/pipeline_example_tests/: test_assets.py
src/pipelines/ascii_library_demo/src/pipeline_example/: README.md  setup.cfg
src/pipelines/ascii_library_demo/src/pipeline_example/pipeline_example/: assets.py  step_2.py
src/pipelines/ascii_library_demo/src/pipeline_example/resources/: __init__.py
