[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "pipeline_example"
working_directory = "src/pipeline_example"

[[tool.mypy.overrides]]
module = "ascii_library.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "setuptools.*"
ignore_missing_imports = true

