[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascii_library"
version = "0.0.1"
description = "Your project description"
authors = [
    { name="Georg Heiler", email="georg.heiler@ascii.ac.at" },
    { name="Hernan Picatto", email="hernan.picatto@ascii.ac.at" }
]
license = { text="MIT" }  # Or another license identifier
dependencies = [
    "dagster>=1.8.0,<1.9",
    "dagster-pipes>=1.8.0,<1.9",
    "boto3>=1.35.17,<1.35.18",
    "boto3-stubs[s3,emr,pricing]>=1.35.21,<1.36",
]

[project.optional-dependencies]
# Define any optional dependencies here

[project.urls]
# Define project-related URLs such as homepage or documentation
repository = "https://github.com/ascii-supply-networks/research-space/tree/main/src/pipelines/ascii_library"

[tool.setuptools.packages.find]
exclude = ["ascii_library_tests"]