[build-system]
requires = ["setuptools>=72", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ascii_library"
version = "0.0.1"
description = "Your project description"
authors = [
  { name = "Georg Heiler", email = "georg.heiler@ascii.ac.at" },
  { name = "Hernan Picatto", email = "hernan.picatto@ascii.ac.at" },
]
license = { text = "MIT" } # Or another license identifier
dependencies = ["dagster>=1.9.0,<1.10", "dagster-pipes>=1.9.0,<1.10", "boto3"]

[project.optional-dependencies]

[project.urls]
# Define project-related URLs such as homepage or documentation
repository = "https://github.com/ascii-supply-networks/research-space/tree/main/src/pipelines/ascii_library"

[tool.setuptools.packages.find]
exclude = ["ascii_library_tests"]
